--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,35 +5,35 @@ build-backend = "setuptools.build_meta"
 
 [project]
 # Basic information about your project.
-name = "your-package-name" 
+name = "ozoptics"
 version = "0.1.0" 
 dependencies = []
 requires-python = ">=3.7"
 authors = [
-  {name = "Your Name", email = "your.email@example.com"}
+  {name = "Don Neill", email = "neill@astro.caltech.edu"}
 ]
 maintainers = [
-  {name = "Your Name", email = "your.email@example.com"}
+  {name = "Don Neill", email = "neill@astro.caltech.edu"}
 ]
-description = "A brief description of your package"
+description = "OZ Optics attenuator software"
 readme = "README.md" 
 license = { text = "MIT" }
-keywords = ["example", "package", "keywords"] 
+# keywords = ["example", "package", "keywords"]
 classifiers = [
   "Programming Language :: Python"
 ]
 
 [project.urls]
 # Various URLs related to your project. These links are displayed on PyPI.
-Homepage = "https://example.com" 
-Documentation = "https://readthedocs.org"
-Repository = "https://github.com/yourusername/your-repo"
-"Bug Tracker" = "https://github.com/yourusername/your-repo/issues" 
-Changelog = "https://github.com/yourusername/your-repo/blob/master/CHANGELOG.md"
+# Homepage = "https://example.com"
+# Documentation = "https://readthedocs.org"
+Repository = "https://github.com/COO-Utils/ozoptics"
+# "Bug Tracker" = "https://github.com/yourusername/your-repo/issues"
+# Changelog = "https://github.com/yourusername/your-repo/blob/master/CHANGELOG.md"
 
 [project.scripts]
 # Defines command-line scripts for your package. Replace with your script and function.
-your-command = "your_module:your_function"
+# your-command = "your_module:your_function"
 
 [project.optional-dependencies]
 # Optional dependencies that can be installed with extra tags, like "dev".
@@ -42,3 +42,7 @@ dev = [
   "black",
   "flake8"
 ]
+[tool.pytest.ini_options]
+  pythonpath = [
+      "."
+  ]
